# ROSEndEffector

./: .buildinfo  .gitignore  .travis.yml  ActionComposed_8cpp.html  ActionComposed_8cpp__incl.map  ActionComposed_8cpp__incl.md5  ActionComposed_8cpp_source.html  ActionComposed_8h.html  ActionComposed_8h__dep__incl.map  ActionComposed_8h__dep__incl.md5  ActionComposed_8h__incl.map  ActionComposed_8h__incl.md5  ActionComposed_8h_source.html  ActionGeneric_8cpp.html  ActionGeneric_8cpp__incl.map  ActionGeneric_8cpp__incl.md5  ActionGeneric_8cpp_source.html  ActionGeneric_8h.html  ActionGeneric_8h__dep__incl.map  ActionGeneric_8h__dep__incl.md5  ActionGeneric_8h__incl.map  ActionGeneric_8h__incl.md5  ActionGeneric_8h_source.html  ActionMultiplePinchTight_8cpp.html  ActionMultiplePinchTight_8cpp__incl.map  ActionMultiplePinchTight_8cpp__incl.md5  ActionMultiplePinchTight_8cpp_source.html  ActionMultiplePinchTight_8h.html  ActionMultiplePinchTight_8h__dep__incl.map  ActionMultiplePinchTight_8h__dep__incl.md5  ActionMultiplePinchTight_8h__incl.map  ActionMultiplePinchTight_8h__incl.md5  ActionMultiplePinchTight_8h_source.html  ActionPinchGeneric_8cpp.html  ActionPinchGeneric_8cpp__incl.map  ActionPinchGeneric_8cpp__incl.md5  ActionPinchGeneric_8cpp_source.html  ActionPinchGeneric_8h.html  ActionPinchGeneric_8h__dep__incl.map  ActionPinchGeneric_8h__dep__incl.md5  (+530 more)
_sources/: actions.rst.txt  examples.rst.txt  googleTests.rst.txt  index.rst.txt  install.rst.txt  issues.rst.txt  nodes.rst.txt  roseeGazeboPlugin.rst.txt  roseeGui.rst.txt  usage.rst.txt
cmake/: FindXenomai.cmake  MacroOptionalBuild.cmake
configs/: dagana.yaml  ex1.yaml  heri.yaml  heri_II.yaml  heri_II_NL.yaml  heri_II_current.yaml  heri_II_heriPlugin.yaml  heri_II_jp.yaml  heri_II_new.yaml  heri_II_real.yaml  heri_II_realLimits.yaml  heri_real.yaml  onrobot_3fg15.yaml  qbhand.yaml  robotiq_2f_140.yaml  robotiq_2f_85.yaml  robotiq_3f.yaml  schunk.yaml  shadowhand_motor.yaml  test_ee.yaml  test_ee_spread.yaml  two_finger.yaml  two_finger_mimic.yaml
configs/models/: cylinder.sdf
configs/rviz/: robotiq_3f.rviz  schunk.rviz  test_ee.rviz  two_finger_mimic.rviz
configs/srdf/: dagana.srdf  ex1.srdf  heri.srdf  heri_II.srdf  heri_II_NL.srdf  heri_II_current_OLD.srdf  heri_II_heriPlugin.srdf  heri_II_new.srdf  heri_II_real.srdf  heri_II_realLimits.srdf  heri_hand.srdf  heri_real.srdf  onrobot_3fg15.srdf  qbhand-groupsForROSEE.srdf  qbhand.srdf  qbhand_old.srdf  robotiq-3f-groupsForROSEE.srdf  robotiq_2f_140.srdf  robotiq_2f_85.srdf  robotiq_3f-ROSEE.srdf  robotiq_3f.srdf  schunk.srdf  shadowhand_motor.srdf  svh-ROSEE.srdf  svh-groupsForROSEE.srdf  svh.srdf  test_ee.srdf  test_ee_spread.srdf  two_finger.srdf  two_finger_mimic.srdf
configs/teleop4exp/: teleop_fixed_base.srdf  teleop_rosee.yaml  teleop_rosee_idle.yaml
configs/urdf/: dagana.urdf  ex1.urdf  heri.urdf  heri.xacro  heri_II.urdf  heri_II.urdf.orig  heri_II.xacro  heri_II_NL.urdf  heri_II_NL.xacro  heri_II_current.urdf  heri_II_current_OLD.urdf  heri_II_heriPlugin.urdf  heri_II_new.urdf  heri_II_real.urdf  heri_II_real.xacro  heri_II_realLimits.urdf  heri_hand.urdf  heri_real.urdf  heri_real.xacro  iit_heri_ros.gazebo  materials.xacro  onrobot_3fg15.urdf  qbhand.urdf  qbhand_fake.urdf  robotiq_2f_140.urdf  robotiq_2f_85.urdf  robotiq_3f.urdf  robotiq_3f_green.urdf  schunk.urdf  shadowhand_motor.urdf  svh-standalone.urdf.xacro  svh.gv  svh.urdf  svh.urdf.xacro  test_ee.urdf  test_ee_gazebo.urdf  test_ee_spread.urdf  two_finger.urdf  two_finger_end_effector.gv  two_finger_mimic.urdf  (+2 more)
doc/: CMakeLists.txt  Doxyfile.in  ROSEndEffector.dox
gui/: simpleGUI.py
hal/: CMakeLists.txt
hal/cmake/: FindRTnet.cmake  MacroInstallLibrary.cmake  MacroSetcap.cmake
hal/include/: heri_2_ee_hal.h
hal/scripts/: ec_xeno3.sh  set_cap.sh
hal/src/: heri_2_ee_hal.cpp
include/ROSEndEffector/: Action.h  ActionPinch.h  (+29 more)
launch/: EEHalExecutor.launch  collisionMoveit.launch  findActions.launch  findActionsHeri.launch  findActionsRobotiq_3f.launch  findActionsSchunk.launch  findActionsSoftHand.launch  findActionsTestEE.launch  findActionsTwoFinger.launch  gaz_test_ee_startup.launch  googleTest_run_all.launch  heri_startup.launch  jsp_startup.launch  old_googleTest_run_all.launch  old_schunk_startup.launch  robotiq_3f_startup.launch  rosee_startup.launch  schunk_startup.launch  test_ee_startup.launch  test_rosee_startup.launch  two_finger_ee_startup.launch
msgs/: EEControl.msg  EEGraspControl.msg  EEPinchControl.msg  EETriggerControl.msg
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  (+66 more)
src/: .collisionMoveit.cpp.kate-swp  Action.cpp  ActionComposed.cpp  ActionGeneric.cpp  ActionMoreTips.cpp  ActionMultiplePinchStrong.cpp  ActionMultiplePinchTight.cpp  ActionPinch.cpp  ActionPinchGeneric.cpp  ActionPinchLoose.cpp  ActionPinchStrong.cpp  ActionPinchTight.cpp  ActionPinchWeak.cpp  ActionPrimitive.cpp  ActionSingleJointMultipleTips.cpp  ActionTimed.cpp  ActionTrig.cpp  DummyHal.cpp  EEHal.cpp  EEHalExecutor.cpp  EEInterface.cpp  FindActions.cpp  HandInfoServices.cpp  MapActionHandler.cpp  MoveItCollider.cpp  Parser.cpp  ParserMoveIt.cpp  PinchAction.cpp  ROSHal.cpp  RosActionServer.cpp  RosServiceHandler.cpp  UniversalFindActions.cpp  UniversalFindActions_old.cpp  UniversalRosEndEffector.cpp  UniversalRosEndEffector2.cpp  UniversalRosEndEffectorExecutor.cpp  UniversalRosEndEffectorExecutor_old.cpp  XBot2Hal.cpp  XBot2HalCommunication.cpp  XBot2Hal_old.cpp  (+3 more)
test/: testUtils.h  test_composedAction.cpp  test_ee_interface.cpp  test_find_pinches.cpp  test_find_trigs.cpp  test_send_action.cpp  test_send_action_old.cpp  test_service_handler.cpp  test_timedAction.cpp
(+180 files in other folders)
